samples/_failures_safe/1761627731_5f8cdc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d8b857c.c: In function ‘main’:
./samples/SAFE/__tmp_0d8b857c.c:153:5: error: expected expression at end of input
  153 |     for (
      |     ^~~
./samples/SAFE/__tmp_0d8b857c.c:153:5: error: expected declaration or statement at end of input
